Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-12283

Nested SEH finally handler runs with incorrect stack pointer

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.4
    • CRT
    • None
    • November 2016

    Description

      MS fastfat crashes in ROS when it decides it needs to verify the disk.
      This is visible as an assertion failure !OplockPostIrp || DirentBcb == NULL in FatCommonCreate, where the two variables both appear to be uninitialized (i.e. filled with 0xcc if runtime checks are enabled).

      Attachments

        Issue Links

          Activity

            People

              ThFabba ThFabba
              ThFabba ThFabba
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: