[KMTESTS:RTL] - Add a test checking stack frame correctness in a nested __finally handler CORE-12283

svn path=/trunk/; revision=73148